Fix GET badge color contrast

--- a/src/openAPISpec/OpenAPISpec.scss
+++ b/src/openAPISpec/OpenAPISpec.scss
@@ -22,7 +22,7 @@ h6.open-api {
 }
 
 .get {
-  @extend .vads-u-background-color--green-light;
+  @extend .vads-u-background-color--green;
 }
 
 .post {
